# HyprlandShaderWallpaper

./: .gitignore  AGENTS.md  AppImageBuilder.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REBRANDING_SUMMARY.md  SpecMulti.md  TODO.md  justfile  launch.sh
.github/: BRANCH_PROTECTION.md  README.md  pull_request_template.md
.github/workflows/: appimage.yml  cache-optimization.yml  ci.yml  rust.yml
crates/hyshadew/: Cargo.toml
crates/hyshadew/src/: bindings.rs  bootstrap.rs  cli.rs  defaults.rs  main.rs  multi.rs  paths.rs  run.rs  state.rs
crates/hyshadew/tests/: defaults_cli.rs  install_script.rs
crates/lambdash/: Cargo.toml
crates/lambdash/src/: bindings.rs  bootstrap.rs  cli.rs  defaults.rs  handles.rs  main.rs  multi.rs  paths.rs  run.rs
crates/lambdash/tests/: defaults_cli.rs  install_script.rs
crates/multiconfig/: Cargo.toml
crates/multiconfig/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: compile.rs  gpu.rs  lib.rs  runtime.rs  types.rs  wallpaper.rs  window.rs
crates/renderer/src/gpu/: channels.rs  context.rs  mod.rs  pipeline.rs  state.rs  timeline.rs  uniforms.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/shadertoy/: Cargo.toml
crates/shadertoy/src/: handle.rs  lib.rs  manifest.rs  pack.rs  path.rs  remote.rs  repository.rs
crates/wallshader/: Cargo.toml
crates/wallshader/src/: bindings.rs  bootstrap.rs  cli.rs  defaults.rs  diagnostics.rs  handles.rs  main.rs  multi.rs  paths.rs  run.rs
crates/wallshader/tests/: install_script.rs
crates/wax11/: Cargo.toml
crates/wax11/src/: bootstrap.rs  cli.rs  defaults.rs  diagnostics.rs  main.rs  multi.rs  paths.rs  run.rs
local-shaders/: README.md  black-white.toml  simplex.toml  workspaces.toml
local-shaders/black/: image.glsl
local-shaders/fungal-apocalypse/: image copy.glsl  image.glsl  shader.toml
local-shaders/grayday/: image.glsl  shader.toml
local-shaders/kal-honeycomb/: shader.toml
local-shaders/kal-honeycomb2/: image.glsl  shader.toml
local-shaders/kal-honeycomn/: image.glsl  shader.toml
local-shaders/kal-petalspire/: shader.toml
local-shaders/kal-prismflux/: image.glsl
local-shaders/playlists/: demo.toml  kaleidoscope.toml  simplex.toml  vibe.toml
local-shaders/raymarching-primitives/: shader.toml
local-shaders/rotating-voronoise/: shader.toml
local-shaders/simplex/: image.glsl  shader.toml
local-shaders/simplex-color/: image.glsl
local-shaders/template/: shader.toml
local-shaders/vibe-aurora/: image.glsl
local-shaders/vibe-coralbloom/: shader.toml
local-shaders/vibe-deepcurrent/: shader.toml
local-shaders/vibe-emberdream/: image.glsl
local-shaders/vibe-lilacglow/: image.glsl  shader.toml
local-shaders/vibe-midnightjazz/: shader.toml
local-shaders/vibe-mojitomist/: shader.toml
local-shaders/vibe-neonrise/: image.glsl  shader.toml
local-shaders/vibe-sakurastream/: image.glsl  shader.toml
local-shaders/vibe-solarflare/: shader.toml
local-shaders/white/: image.glsl
multi/: default.toml  simplex.toml  workspaces.toml
playlists/: efficient.toml  kaleidoscope.toml  shadertoy-aggressive copy.toml  shadertoy.toml  simplex.toml  workspaces.toml
scripts/: install.sh  launch-local  launch-local-async  setup-sccache.sh
shaders/: README.md  simplex.toml
shaders/black/: shader.toml
shaders/fungal-apocalypse/: shader.toml
shaders/kal-honeycomb2/: image.glsl
shaders/kal-petalspire/: image.glsl
shaders/kal-prismflux/: shader.toml
shaders/kal-starweave/: image.glsl  shader.toml
shaders/raymarching-primitives/: image.glsl  shader.toml
shaders/rotating-voronoise/: image.glsl  shader.toml
shaders/simplex-color/: image.glsl  shader.toml
shaders/template/: image.glsl  shader.toml
shaders/vibe-aurora/: shader.toml
shaders/vibe-coralbloom/: image.glsl
shaders/vibe-deepcurrent/: image.glsl
shaders/vibe-emberdream/: shader.toml
shaders/vibe-grayday/: shader.toml
shaders/vibe-midnightjazz/: image.glsl
shaders/vibe-mojitomist/: image.glsl
shaders/vibe-solarflare/: image.glsl
shaders/white/: shader.toml
spec/: Broaden.md  Public.md  SpecMulti.md  paths.md  shaderc.md
