[workspace]
members = [
    "crates/lambdash", "crates/multiconfig",
    "crates/renderer", "crates/scheduler",
    "crates/shadertoy",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/NickCody/HyprlandShaderWallpaper"
homepage = "https://github.com/NickCody/HyprlandShaderWallpaper"
readme = "README.md"
keywords = ["hyprland", "wallpaper", "shadertoy", "wayland"]
categories = ["graphics", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
