[package]
name = "hyshadew"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
multiconfig = { path = "../multiconfig" }
renderer = { path = "../renderer" }
scheduler = { path = "../scheduler" }
serde.workspace = true
serde_json.workspace = true
shadertoy = { path = "../shadertoy" }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
