[package]
name = "hyshadew"
version = "0.9.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "Wayland wallpaper daemon that renders ShaderToy-compatible GPU shaders using wgpu"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
multiconfig = { path = "../multiconfig" }
renderer = { path = "../renderer" }
scheduler = { path = "../scheduler" }
serde.workspace = true
serde_json.workspace = true
shadertoy = { path = "../shadertoy" }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
