[package]
name = "renderer"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
wgpu = { version = "26", features = ["glsl"] }
winit = { version = "0.29", features = ["wayland"] }
raw-window-handle = "0.6"
smithay-client-toolkit = { version = "0.18", default-features = false, features = ["calloop"] }
tracing.workspace = true
chrono = { version = "0.4", features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }
crossbeam-channel = "0.5"
