[package]
name = "renderer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["shaderc"]
shaderc = ["dep:shaderc"]
shaderc-build-from-source = ["shaderc?/build-from-source"]
shaderc-prefer-static-linking = ["shaderc?/prefer-static-linking"]
naga-glsl = []

[dependencies]
anyhow.workspace = true
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
wgpu = { version = "26", features = ["glsl", "spirv"] }
winit = { version = "0.29", features = ["wayland"] }
raw-window-handle = "0.6"
smithay-client-toolkit = { version = "0.18", default-features = false, features = ["calloop"] }
tracing.workspace = true
chrono = { version = "0.4", features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }
crossbeam-channel = "0.5"
shaderc = { version = "0.10", optional = true }
