[package]
name = "wallshader"
version = "0.9.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "WallShader wallpaper daemon that renders ShaderToy-compatible GPU shaders using wgpu"
keywords.workspace = true
categories.workspace = true

[features]
default = ["shaderc"]
shaderc = ["renderer/shaderc"]
shaderc-build-from-source = ["renderer/shaderc-build-from-source"]
shaderc-prefer-static-linking = ["renderer/shaderc-prefer-static-linking"]
naga-glsl = ["renderer/naga-glsl"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
multiconfig = { path = "../multiconfig" }
renderer = { path = "../renderer" }
scheduler = { path = "../scheduler" }
serde.workspace = true
serde_json.workspace = true
shadertoy = { path = "../shadertoy" }
tracing.workspace = true
tracing-subscriber.workspace = true
directories-next = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
